Revert "Merge branch 'main' of https://github.com/nathanbodie/zmk-sofle"
This reverts commit fa3b76790eb6fa7d659955ce3aa9486ebc019967, reversing
changes made to 6f6d9bef6d68a5f96b496642b9cefe10fdc305f2.

Revert accidental layout override

--- a/keymap-drawer/eyelash_sofle.yaml
+++ b/keymap-drawer/eyelash_sofle.yaml
@@ -115,7 +115,7 @@ layers:
   - '"'
   - '|'
   - {t: '-', s: _}
-  - {t: '$$mdi:transfer$$', type: trans}
+  - '&trabs'
   - {t: '$$mdi:transfer$$', type: trans}
   - {t: '$$mdi:transfer$$', type: trans}
   - $$mdi:volume-off$$
@@ -151,11 +151,11 @@ layers:
   - {t: '$$mdi:transfer$$', type: trans}
   - {t: '$$mdi:transfer$$', type: trans}
   - {t: '$$mdi:menu-down$$', s: '$$mdi:mouse$$'}
+  - {t: '$$mdi:transfer$$', type: trans}
   - END
   - PG DN
   - PG UP
   - HOME
-  - {t: '$$mdi:transfer$$', type: trans}
   - +
   - {t: '$$mdi:transfer$$', type: trans}
   - OUT USB
@@ -164,11 +164,11 @@ layers:
   - {t: '$$mdi:transfer$$', type: trans}
   - {t: '$$mdi:transfer$$', type: trans}
   - {t: '$$mdi:menu-left$$', s: '$$mdi:mouse$$'}
+  - {t: '$$mdi:transfer$$', type: trans}
   - $$mdi:arrow-left-bold$$
   - $$mdi:arrow-down-bold$$
   - $$mdi:arrow-up-bold$$
   - $$mdi:arrow-right-bold$$
-  - {t: '$$mdi:transfer$$', type: trans}
   - '}'
   - {t: '$$mdi:transfer$$', type: trans}
   - {t: '$$mdi:transfer$$', type: trans}
